--- a/README
+++ b/README
@@ -1,13 +1,13 @@
 TimestampedBoolean
 ==================
 
-Introduction goes here.
+Use timestamps for boolean columns.
 
 
 Example
 =======
 
-Example goes here.
+
 
 
 Copyright (c) 2009 [name of plugin creator], released under the MIT license
